test_regress/t/t_mem_packed_bad.out
%Error: t/t_mem_packed_bad.v:26: CONST '28'h0' unexpected in assignment to unpacked array
%Error: Exiting due to
